<resources>
    <string name="app_name">BookWorm</string>
    <string name="confirm">Confirm</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="has_registered">Already have an account? Login here.</string>
    <string name="not_registered">Do not have an account? Register here.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_explore">Explore</string>
    <string name="title_chats">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="about_book">About this book</string>
    <string name="add_book_short">Add</string>
    <string name="add_book">Add a book to your inventory</string>
    <string name="search_books">Search for books nearby</string>
    <string name="search_books_short">Search nearby</string>
    <string-array name="profile">
        <item>Edit Profile</item>
        <item>Edit Inventory</item>
        <item>Log Out</item>
    </string-array>
    <string name="profile_photo">User Profile Photo</string>
    <string name="choose_image">Choose Image</string>
    <string name="user_image">User\'s Profile Picture</string>
    <string name="book_image">Book\'s Cover Picture</string>
    <string name="select_location">Select Location</string>
    <string name="no_books">No books found in inventory. Add books using the Floating Action Button</string>
    <string name="no_chats">No chats found.</string>
    <string name="no_nearby_users">No nearby users have the requested book.</string>
    <string name="type_message">Type a message</string>

</resources>
